--- a/angular.json
+++ b/angular.json
@@ -122,5 +122,8 @@
       }
     }
   },
-  "defaultProject": "before-i-die"
+  "defaultProject": "before-i-die",
+  "cli": {
+    "analytics": "18d8a131-b102-42bc-b396-dc995b07048e"
+  }
 }
