alansiqma: correcao no dockerfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,19 @@
-events{}
+error_log stderr;
+pid /var/run/nginx.pid;
+
+events {
+      worker_connections 1024;
+}
 
 http {
-
-    include /etc/nginx/mime.types;
-
+  access_log /dev/stdout;
+  #server_tokens off; # Hide nginx version in Server header & page footers
     server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
         index index.html;
-
         location / {
             try_files $uri $uri/ /index.html;
         }
     }
+  include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/mime.types;
 }
