--- a/DockerFile
+++ b/DockerFile
@@ -1,3 +1,7 @@
-FROM nginx:1.17.1-alpine
+FROM nginx:1.19.6
+
+COPY default.conf.template /etc/nginx/conf.d/default.conf.template
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY /dist/before-i-die /usr/share/nginx/html
+
+CMD /bin/bash -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
