--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/material": "^11.0.2",
+    "@angular/material-moment-adapter": "^11.0.0",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
