--- a/DockerFile
+++ b/DockerFile
@@ -2,6 +2,6 @@ FROM nginx:1.19.6
 
 COPY default.conf.template /etc/nginx/conf.d/default.conf.template
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY dist /usr/share/nginx/html
+COPY ./dist /usr/share/nginx/html
 
 CMD /bin/bash -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
