--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,23 @@
+FROM node:12.2.0 as build
+WORKDIR /app
+
+ENV PATH /app/node_modules/.bin:$PATH
+
+COPY package.json /app/package.json
+RUN npm install
+RUN npm install -g @angular/cli@8.3.22
+
+COPY . /app
+
+RUN npm i --save-dev typescript@3.6.4
+
+RUN ng build --prod --output-path=dist
+
 FROM nginx:1.19.6
 
 COPY default.conf.template /etc/nginx/conf.d/default.conf.template
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY ./dist /usr/share/nginx/html
-
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
 CMD /bin/bash -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
