--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-    "name": "before-i-die",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~11.0.3",
-        "@angular/cdk": "^11.0.2",
-        "@angular/common": "~11.0.3",
-        "@angular/compiler": "~11.0.3",
-        "@angular/core": "~11.0.3",
-        "@angular/forms": "~11.0.3",
-        "@angular/material": "^11.0.2",
-        "@angular/material-moment-adapter": "^11.0.0",
-        "@angular/platform-browser": "~11.0.3",
-        "@angular/platform-browser-dynamic": "~11.0.3",
-        "@angular/router": "~11.0.3",
-        "@ctrl/ngx-emoji-mart": "^5.0.2",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^15.2.1",
-        "@angular/cli": "^11.1.2",
-        "@angular/compiler-cli": "~11.0.3",
-        "@types/jasmine": "~3.6.0",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^0.0.28",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "^6.4.1",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.0.2"
-    }
+  "name": "before-i-die",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --configuration production",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~12.2.17",
+    "@angular/cdk": "^11.0.2",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/material": "^11.0.2",
+    "@angular/material-moment-adapter": "^11.0.0",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
+    "@ctrl/ngx-emoji-mart": "^5.0.2",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^15.2.1",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^0.0.28",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5"
+  }
 }
